# TradingBot

./: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_REPORT.md  README.md  RELEASE_NOTES.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
analytics/: __init__.py
analytics/analysis/: __init__.py  analytics_engine.py  coin_analysis.py  correlation_analysis.py  market_analysis.py  performance_analysis.py  risk_analysis.py  sentiment_analysis.py  summary_generator.py  time_analysis.py  trader_analysis.py
analytics/feature_engineering/: generator.py
analytics/ingestion/: __init__.py  dataset_detector.py  dataset_registry.py  detector.py  file_scanner.py  loader.py  metadata.py  schema_mapper.py  upload_handler.py  validator.py
analytics/preprocessing/: merger.py  normalizer.py
analytics/reports/: __init__.py  html_compiler.py  markdown_compiler.py  pdf_compiler.py  report_engine.py
analytics/statistics/: __init__.py  confidence_intervals.py  correlation.py  descriptive_statistics.py  distribution.py  effect_size.py  hypothesis_testing.py  statistics_engine.py  summary.py
analytics/strategy/: __init__.py  base_strategy.py  rule_based.py  strategy_engine.py
analytics/visualization/: __init__.py  heatmaps.py  (+7 more)
config/: __init__.py  constants.py  enums.py  paths.py  settings.py
dashboard/: __init__.py  app.py
data/: mock_fear_greed_index.csv  mock_trader_history.xlsx  registry.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASSIGNMENT_COMPLIANCE.md
tests/: conftest.py  test_analysis.py  test_bot.py  test_infra.py  test_ingestion.py  test_reporting.py  test_statistics.py  test_strategy.py  test_visualization.py
trading_bot/: __init__.py  cli.py  order_manager.py  position_manager.py  risk_manager.py
utils/: __init__.py  config_utils.py  dataframe_utils.py  exceptions.py  file_utils.py  generate_mock_data.py  logger.py  time_utils.py  validation_utils.py
(+24 files in other folders)
